	New functions.
	Remove useless nact-iactions-list-item-updated signal.
	Connect instead to nact-tab-updatable-item-updated signal.
	(get_treeview_name): New pure virtual function.

	* src/nact/nact-main-menubar.c (on_duplicate_activated):
	Takes advantage of new UI preferences.
	Define new Expand all/Collapse all menu items.

	* src/nact/nact-preferences-editor.c:
	Edit the new UI preferences.

	* src/nact/nautilus-actions-config-tool.actions:
	Define new View menu.

	* src/nact/nautilus-actions-config-tool.ui:
	Edit the user preferences in a notebook.
	Remove "orientation=vertical" vbox properties.

2009-09-27 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-api.h (na_object_set_for_copy): New function.

	* src/common/na-object-id-fn.h:
	* src/common/na-object-id.c (na_object_id_set_for_copy): New function.
	(most_derived_new_id): Do not search in NAObjectClass.

	* src/common/na-object-item.c (na_object_item_remove_item):
	Release the reference on the removed item.
	Only release the reference when action or menu, not profile.

	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h (nact_clipboard_primary_set,
	nact_clipboard_primary_get, nact_clipboard_primary_counts):
	Now use the NactClipboard convenience object.
	Uses na_object_id_set_for_copy().

	* src/nact/nact-iactions-list.c (on_treeview_selection_changed):
	Only get selected items when about to send the message.
	Do not try to select a null path.

	* src/nact/nact-main-menubar.c:
	Now use the NactClipboard convenience object.
	Uses na_object_id_set_for_copy().
	(on_paste_activated): Setup the new action when pasting a profile.

	* src/nact/nact-main-window.c:
	* src/nact/nact-main-window.h (nact_main_window_get_clipboard):
	New function.

2009-09-26 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-iduplicable.c:
	* src/common/na-iduplicable.c (na_iduplicable_dispose): New function.
	Rewrite signal logic to avoid having to override class handler.

	* src/common/na-gconf-monitor.c: